# squirrel-lsp

./: Cargo.toml  README.md  install-vscode.sh  install.sh  release.sh  rustfmt.toml
.github/workflows/: build-binaries.yml  windows-build.yml
src/: bb_support.rs  class_registry.rs  code_actions.rs  errors.rs  formatter.rs  helpers.rs  hook_analyzer.rs  inheritance_analyzer.rs  lib.rs  main.rs  navigation.rs  semantic_analyzer.rs  symbol_extractor.rs  symbol_resolver.rs  symbols.rs  syntax_analyzer.rs  tree_sitter_helpers.rs  workspace.rs
tests/: comments_test.rs  debug_ast.rs  formatter_tests.rs  integration_test.rs  multiline_comments_test.rs  semantic_tests.rs  syntax_tests.rs
tests/expected/: 001_simple_fn.nut  002_for_loop.nut  003_foreach_loop.nut  005_struct.nut  006_perk_legend_muscularity.nut  010_ternary.nut  011_comma.nut  012_function_args.nut  016_switch.nut
tests/input/: 004_queue_block.nut  006_perk_legend_muscularity.nut  010_ternary.nut  011_comma.nut  014_perk_legend_swagger.nut
tests/semantic/: 01_declared_local_variable.nut  024_math.nut  025_new_slot_declaration.nut  026_table_slot_visibility.nut  027_table_function_visibility.nut  028_variable_out_of_scope_for_loop.nut  029_function_declared_in_parent.nut  02_undeclared_variable.nut  030_nested_table_slot_usage.nut  031_undeclared_variable.nut  (+22 more)
vscode-extension/: .gitignore  .vscodeignore  LICENSE.md  README.md  esbuild.js  package-lock.json  package.json  squirrel-lsp-vscode-0.1.0.vsix  tsconfig.json
zed-extension/: .gitignore  Cargo.toml  README.md  extension.toml  extension.wasm
(+79 files in other folders)
