[package]
name = "squirrel-lsp"
version = "0.5.0"
edition = "2024"

[dependencies]
thiserror = "1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "io-std",
] }
tower-lsp = "0.20"
tree-sitter = "0.20"
tree-sitter-squirrel = { git = "https://github.com/mnshdw/tree-sitter-squirrel.git" }

[dev-dependencies]
pretty_assertions = "1"

[workspace.lints.clippy]
allow_attributes_without_reason = "deny"
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = 1 }

dbg_macro = "deny"
exit = "deny"

empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
mutex_atomic = "warn"
panic_in_result_fn = "warn"
same_name_method = "warn"
unused_result_ok = "warn"
unwrap_in_result = "warn"
verbose_file_reads = "warn"
